objects/Policy__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Policys</relationshipLabel>
        <relationshipName>Policys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Status__c</fullName>
        <label>Policy_Status</label>
        <picklist>
            <picklistValues>
                <fullName>Policy In Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Declined/Incomplete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy_Type</label>
        <picklist>
            <picklistValues>
                <fullName>ILP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Related</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>